--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Emilian Wilczek</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
+
+				<!-- Header -->
+					<header id="header">
+						<h1>Emilian Wilczek</h1>
+						<p>Photography &nbsp;&bull;&nbsp; Art &nbsp;&bull;&nbsp; Software</p>
+						<nav>
+							<ul>
+								<li><a href="https://www.instagram.com/emilianwilczek/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<!-- <li><a href="#" class="fa fa-phone"><span class="label">Phone number</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands fa-behance"><span class="label">Behance</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands fa-flickr"><span class="label">Behance</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+								<li><a href="https://github.com/EmilianW" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li> -->
+								<li><a href="mailto: wilczekemilian@protonmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Emilian Wilczek. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+					</footer>
+
+			</div>
+		</div>
+		<script>
+			window.onload = function() { document.body.classList.remove('is-preload'); }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
 </html>
