Added DES310 link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Emilian Wilczek</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -25,12 +26,8 @@
 						<nav>
 							<ul>
 								<li><a href="https://www.instagram.com/emilianwilczek/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<!-- <li><a href="#" class="fa fa-phone"><span class="label">Phone number</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands fa-behance"><span class="label">Behance</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands fa-flickr"><span class="label">Behance</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 								<li><a href="https://github.com/EmilianW" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<!-- <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li> -->
+								<li><a href="https://redacted-assets.itch.io/through-the-waves" class="icon brands fa-gamepad"><span class="label">Through The Waves</span></a></li>
 								<li><a href="mailto: wilczekemilian@protonmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
