--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<ul>
 								<li><a href="https://www.instagram.com/emilianwilczek/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/EmilianW" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://redacted-assets.itch.io/through-the-waves" class="icon brands fa-gamepad"><span class="label">Through The Waves</span></a></li>
+								<li><a href="https://redacted-assets.itch.io/through-the-waves" class="icon solid fa-gamepad"><span class="label">Through The Waves</span></a></li>
 								<li><a href="mailto: wilczekemilian@protonmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
