Gamedev portfolio page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<span class="hover-text">Github</span>
 								</li>
 								<li>
-									<a href="gamedev.html" class="icon solid fa-gamepad">
+									<a href="gamedev/index.html" class="icon solid fa-gamepad">
 										<span class="label">Gamedev</span>
 									</a>
 									<span class="hover-text">Gamedev</span>
