--- a/gamedev/index.html
+++ b/gamedev/index.html
@@ -38,18 +38,10 @@
 							<h2>THROUGH THE WAVES</h2>
 						</header>
 						<div class="content">
-							<p>During year 3 at Abertay University I was the <strong>producer and solo programmer</strong> of a 7-person project. Through The Waves is a short story game focused on the enviorenmtal impact of humans on the aquatic life.</p>
-							<!-- Section -->
-							<section>
-								<div class="content">
-									<div class="gallery">
-										<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
-									</div>
-								</div>
-							</section>
+							<p>During year 3 at Abertay University I was the <strong>producer and solo programmer of a 7-person project</strong>. Through The Waves is a short story game focused on the enviorenmtal impact of humans on the aquatic life. I was responsible for coordinating the team as well as creating the mechanics of the game, including the playable character's movement, a cinematic camera, menus and more. I also directed and implemented the cinematics.</p>
+							<span class="image main"><img src="images/gallery/fulls/01.gif" alt="" /></span>
+							<span class="image main"><img src="images/gallery/fulls/02.gif" alt="" /></span>
+							<span class="image main"><img src="images/gallery/fulls/03.gif" alt="" /></span>
 						</div>
 					</section>
 
@@ -59,8 +51,9 @@
 							<h2>DirectX 11 graphics programming project</h2>
 						</header>
 						<div class="content">
-							<p><strong>DirectX 11 project</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<p>I worked on a <strong>DirectX 11 project</strong> where I created various shaders for lighting, reflections, soft shadows, vertex manipulation and tessellation.</p>
+							<span class="image main"><img src="images/gallery/fulls/04.jpg" alt="" /></span>
+							<span class="image main"><img src="images/gallery/fulls/05.gif" alt="" /></span>
 						</div>
 					</section>
 
@@ -70,8 +63,8 @@
 							<h2>Extreme Battle Bumper Cars</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<p>As part of a <strong>2-person team</strong> I worked on a 1v1 game about toy cars where the goal is to push the enemy of the table by bumping into them or using powerups. I implemented the driving model and the bulk of the mechanics.</p>
+							<span class="image main"><img src="images/gallery/fulls/06.gif" alt="" /></span>
 						</div>
 					</section>
 
@@ -81,23 +74,13 @@
 						<h2>Memory Lane</h2>
 					</header>
 					<div class="content">
-						<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-						<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+						<p>I was a part of a team working on a project that was part of a <strong>DARE Academy</strong> application. I used my experience to create a driving model in Unity and later on remade it in Unreal.</p>
+						<span class="image main"><img src="images/gallery/fulls/07.gif" alt="" /></span>
 					</div>
 				</section>
 
 				<!-- Section -->
-				<section>
-					<header>
-						<h2>Tank turret mechanic</h2>
-					</header>
-					<div class="content">
-						<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-						<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-					</div>
-				</section>
-
-				<!-- Section -->
+				  <!-- 
 					<section>
 						<header>
 							<h2>Other projects</h2>
@@ -106,11 +89,10 @@
 							<p><strong>Go back</strong> if you are interested in learning about other types of projects I've done.</p>
 							<ul class="actions">
 								<li><a href="#" class="button primary large">Go back</a></li>
-								<li><a href="#" class="button large">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
-
+				-->
 				<!-- Elements -->
 				<!--
 					<section>
@@ -380,6 +362,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				-->
 
 				<!-- Section -->
+				 <!-- 
 					<section>
 						<header>
 							<h2>Get in touch</h2>
@@ -431,9 +414,9 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							</ul>
 						</footer>
 					</section>
-
+				-->
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Emilian Wilczek. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 			</div>
 
